fix: h2 to center within paragraph, add 960px max-width panel, center align semi-d version.

--- a/frontend/assets/css/text-viewer2.scss
+++ b/frontend/assets/css/text-viewer2.scss
@@ -59,7 +59,7 @@ section#text-viewer {
     justify-content: center;
     > .panel {
       border: 1px solid $gray-dark;
-      width: 100%;
+      max-width: 960px;
       height: calc(100vh - 170px);
       overflow: scroll;
       flex-direction: column;
@@ -871,7 +871,6 @@ section#text-viewer {
 
 @media screen and (max-width: 1200px) {
   section .panel-wrapper > .panel {
-    max-width: 100vw;
     nav.panel-nav div {
       .icon {
         span {
@@ -995,12 +994,17 @@ $render-sic: false;
   position: relative;
   padding: 0 3% 0 0;
   opacity: 30%;
+  min-height: calc(100% - 40px);
+  position:relative;
+  justify-content: center;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  justify-content: center;
 
   &.loaded {
     opacity: 100%;
-    max-width: 800px;
-    min-height: calc(100% - 40px);
-    position:relative;
+
   }
 
   // Spaces, gaps & damages
@@ -1015,6 +1019,12 @@ $render-sic: false;
     br.missing-line {
       display: inline;
     }
+  }
+
+  &.view-semidip{
+  }
+  &.view-modern{
+    max-width: 800px;
   }
 
   span[data-tei-unit="char"] .missing-content-message {
